# optical_ant_detection

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  antcam  antcam.service  antcam.timer  capture  count_ants.cpp  count_ants.py  docker-compose.yml  install.sh
integrations/homeassistant/: discovery.json  hass_setup.sh  mqtt.env.example
integrations/ntfy/: ntfy.env.example
integrations/openrc/: antcam  antcam.cron
integrations/systemd/: antcam.service
src/: Dockerfile  antcam  capture  config.yaml  count_ants.cpp  notify
tests/: run_tests.sh
